--- a/app/frontend/dockerfile
+++ b/app/frontend/dockerfile
@@ -4,10 +4,13 @@ WORKDIR /app
 COPY package*.json ./
 RUN npm install
 COPY . .
-RUN npm run build
 
-# Stage 2: Serve the frontend
-FROM nginx:alpine
-COPY --from=build-stage /app/dist /usr/share/nginx/html
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Use development mode for hot reload
+CMD ["npm", "run", "serve"]
+
+# Stage 2: Serve the frontend (for production)
+# Uncomment the following lines for production build
+# FROM nginx:alpine
+# COPY --from=build-stage /app/dist /usr/share/nginx/html
+# EXPOSE 80
+# CMD ["nginx", "-g", "daemon off;"]
